@@ -31,7 +31,7 @@ flywheel_forge_version=0.6.10-105
 # Other libraries
 mixinextras_version=0.3.5
 rpl_version=2.0.0-dev
-rpl_build=175
+rpl_build=177
 
 # Do not push changes.
 fabric_recipe_viewer=emi
